syntax = "proto3";

package practical.grpc.v1;

service Database {
  rpc Search(SearchRequest) returns (stream SearchResponse);
}

message SearchRequest {
  string term       = 1;
  int64 max_results = 2;
}

message SearchResponse {
  string matched_term = 1;
  string content      = 2;
  int32 rank          = 3;
}
